[package]
name = "music-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
futures-util = { version = "0.3.31", default-features = false }
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = "0.26.2"
warp = "0.3.7"

[profile.release]
opt-level = 'z'
panic = 'abort'
strip = true
