[package]
name = "music-server"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
channelmap = "0.1.0"
clap = { version = "4.5.31", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 'z'
panic = 'abort'
strip = true
