[package]
name = "music-server"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
channelmap = "0.3.0"
clap = { version = "4.5.37", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 'z'
panic = 'abort'
strip = true
